<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PoemApps</string>
    <string name="about">Gab Marcondes + Bruno Vianna</string>
	<string-array name="doublets_array">
		<item>bom</item>
		<item>6</item>
		<item>mau</item>
		<item>fogo</item>
		<item>6</item>
		<item>gelo</item>
		<item>nada</item>
		<item>8</item>
		<item>tudo</item>
		<item>longe</item>
		<item>7</item>
		<item>perto</item>
		<item>nada</item>
		<item>8</item>
		<item>tudo</item>
		<item>céu</item>
		<item>7</item>
		<item>mar</item>
		<item>deus</item>
		<item>6</item>
		<item>caos</item>
		<item>manhã</item>
		<item>8</item>
		<item>tarde</item>
		<item>tarde</item>
		<item>8</item>
		<item>noite</item>
		<item>sol</item>
		<item>3</item>
		<item>lua</item>
		<item>mente</item>
		<item>10</item>
		<item>corpo</item>
		</string-array>
	<string name="action_settings">wot</string>
	<string name="button_doublet_jogo">poema jogo</string>
	<string name="button_doublet_livre">poema livre</string>
	<string name="button_doublet_win">doublet completo!</string>
	<string name="button_doublet_novo">jogue outro doublet</string>
	<string name="button_doublet_novamente">tente novamente</string>
	<string name="notificacao_perdeu">instruções blabla lba</string>
    <string name="instrucoes_doublet">instruções blabla lba</string>
    
    <!--  sopro -->
	<string-array name="sopro_texto">
		<item>guelra palavra</item>
		<item>dentro dela o ar</item>
		<item>entrando e saindo</item>
		<item>expirar inspirar</item>
		<item>colocar uma palavra fora d’água</item>
		<item>nas entre le / r / tras</item>
		<item>a palavra respira os sentidos que</item>
		<item>ainda vêm</item>
		<item>não é uma guerra</item>
		<item>longe</item>
		<item>mas uma outra espécie de paz</item>
		<item>a palavra erra</item>
		<item>quando diz mais</item>
	</string-array>
	<string-array name="sopro_fases">
		<item>003022 1111111</item>
		<item>111111 0000 2 33</item>
		<item>32233000 1 111000</item>
		<item>0000000 11111144</item>
		<item>1111111 000 0000000 for2 111111</item>
		<item>000 11111 33 0 0 0 2322</item>
		<item>0 0000000 0000000 11 44444443 000</item>
		<item>33333 000</item>
		<item>111 0 000 004323</item>
		<item>00000</item>
		<item>111 000 33333 2222222 11 000</item>
		<item>2 4444444 0000</item>
		<item>222222 333 0011</item>
	</string-array>    
</resources>
