<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_doublet_notificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacao_perdeu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_doublet_novamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_doublet_novamente" />

    <Button
        android:id="@+id/button_doublet_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/button_doublet_novo" />

</TableLayout>
