<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+id/instrucoes_doublet" />

    <Button
        android:id="@+id/button_doublet_jogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_doublet_jogo" />

    <Button
        android:id="@+id/button_doublet_livre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_doublet_livre" />

    <Button
        android:id="@+id/button_doublet_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_doublet_win"
        android:visibility="invisible" />

</TableLayout>
